--- a/about.html
+++ b/about.html
@@ -39,20 +39,27 @@
             <img src="z-images/about-me-image.jpg" alt="Your Name">
         </div>
     </div>
+</div>
+
     <div class="divider"></div>
-    <div class="resume">
-         <!--<h2></h2>-->
-        <h3>Skills</h3>
-        <ul>
-            <li>Web Development</li>
-            <li>Graphic Design</li>
-            <li>Project Management</li>
-            <li>Team Collaboration</li>
-            <li>Illustrator</li>
-            <li>Photoshop</li>
-            <li>Adobe XD</li>
-            <li>Photography</li>
-        </ul>
+    <div class="resume-container">
+        <div class="resume-image">
+            <img src="z-images/skills.png">
+        </div>
+        <div class="resume-content">
+            <h2>Skills</h2>
+            <!--<h3>Skills</h3>-->
+            <ul>
+                <li>Web Development</li>
+                <li>Graphic Design</li>
+                <li>Project Management</li>
+                <li>Team Collaboration</li>
+                <li>Illustrator</li>
+                <li>Photoshop</li>
+                <li>Adobe XD</li>
+                <li>Photography</li>
+            </ul>   
+        </div>
     </div>
 
     <footer class="footer">
