--- a/photo.html
+++ b/photo.html
@@ -5,16 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="z-css/photo.css" rel="stylesheet">
     <link rel="stylesheet" href="z-css/nav-footer.css">
-    <title>Photo Gallery</title>
+    <title>Contact</title>
 </head>
-<body>
-    <header class="nav">
-        <nav>
-            <div class="logo">
-                <a href="index.html"><img src="z-images/logo.png" alt=""></a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+<body>   
+  <header class="nav">
+    <nav>
+        <div class="logo">
+          <a href="index.html"><img src="z-images/logo.png" alt=""></a>
+        </div>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="photo.html">Photo's</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+  </header>
+
+    <header class="title">
+        <h1>My Photography Work</h1>
+    </header>
+
+    <section class="hero-beach">
+        <div class="hero-content-beach">
+        <h2>Beach Photo's</h2>
+        <p>
+            Immerse yourself in the tranquil beauty of the sea with my beach photography portfolio. Capturing the timeless allure of the ocean's vast expanse, our collection transports you to the serene shores where the waves meet the horizon. From the graceful dance of sea birds against the endless blue canvas to the soothing rhythm of the tides, each photograph invites you to savor the essence of coastal serenity.
+        </p>
+        <a href="portfolio.html" class="button">View Photo's</a>    
+        </div>   
+    </section>
+
+    <section class="hero-animals">
+        <div class="hero-content-animals">
+        <h2>Beach Photo's</h2>
+        <p>
+            Explore the heartwarming world of canine companions through my dog photography portfolio. From the exuberant playfulness of puppies to the dignified wisdom of senior dogs, my collection celebrates the diverse personalities and emotions of our four-legged friends. With each click of the shutter, we capture the loyalty, joy, and boundless love that dogs bring to our lives, inviting you to connect with the warmth and charm of these furry family members.
+        </p>
+        <a href="portfolio.html" class="button">View Photo's</a>    
+        </div>   
+    </section>
+
+  <footer class="footer">
+    <div class="footer-left">
+        <img src="z-images/logo.png" alt="Logo">
+        <div class="copyright">&copy; 2023 Graci Edinger</div>
+    </div>
+    <div class="footer-right">
+        <nav class="footer-links">
+            <ul>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="photo.html">Photo's</a></li>
                 <li><a href="about.html">About</a></li>
@@ -22,208 +63,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
-    
-    <header class="title">
-        <h1>Photo Gallery</h1>
-      </header>
-
-    <div class="gallery">
-        <div class="tags">
-            <button class="tag-button" data-category="all">All</button>
-            <button class="tag-button" data-category="beach">Beach</button>
-            <button class="tag-button" data-category="animal">Animal's</button>
-        </div>
-
-        <div class="grid">
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach1.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach2.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach3.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach4.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach5.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach6.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach7.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach8.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach9.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach10.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach11.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach12.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach13.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach14.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach15.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach16.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach17.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach18.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach19.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach20.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach21.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach22.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach23.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach24.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach25.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach26.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach27.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach28.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach29.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach30.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="beach">
-                <img src="z-imagesgallery/beach31.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal1.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal2.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal6.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal7.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal8.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal9.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal10.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal11.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal12.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal13.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal14.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal15.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal16.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal17.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal18.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal19.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal20.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal21.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal22.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal23.jpg" alt="">
-            </div>
-            <div class="gallery-item" data-category="aniaml">
-                <img src="z-imagesgallery/animal24.jpg" alt="">
-            </div>
-        </div>
-
     </div>
-    <div class="lightbox">
-        <span class="close-button">&times;</span>
-        <div class="lightbox-content">
-            <img src="" alt="Enlarged Image">
-            <div class="controls">
-                <button id="prev-button">Previous</button>
-                <button id="next-button">Next</button>
-            </div>
-            
-        </div>
-    </div>
-
-    <footer class="footer">
-        <div class="footer-left">
-            <img src="z-images/logo.png" alt="Logo">
-            <div class="copyright">&copy; 2023 Graci Edinger</div>
-        </div>
-        <div class="footer-right">
-            <nav class="footer-links">
-                <ul>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="photo.html">Photo's</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
-    <script src="galleryscript.js"></script>
+</footer>
 </body>
 </html>
