--- a/portfolio.html
+++ b/portfolio.html
@@ -104,24 +104,24 @@
         <div class="portfolio-item">
             <a href="z-portfolio/project10.html">
                 <img src="z-images/project10.png" alt="">
-                <h2>project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h2>Coming Soon...</h2>
+                <p></p>
             </a>
         </div>
 
         <div class="portfolio-item">
             <a href="z-portfolio/project11.html">
                 <img src="z-images/project11.png" alt="">
-                <h2>project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h2>Coming Soon...</h2>
+                <p></p>
             </a>
         </div>
 
         <div class="portfolio-item">
             <a href="z-portfolio/project12.html">
                 <img src="z-images/project12.png" alt="">
-                <h2>project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h2>Coming Soon...</h2>
+                <p></p>
             </a>
         </div>
     </section>
