--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
         </div>
     </section>
 
+ 
+
+    <section class="contact">
+        <div class="contact-content">
+            <h2>Contact Me</h2>
+            <p>Feel free to get in touch with me for inquiries or collaborations.</p>
+            <a href="contact.html" class="btn">Contact</a>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="footer-left">
             <img src="z-images/logo.png" alt="Logo">
@@ -66,6 +76,6 @@
             </nav>
         </div>
     </footer>
-
+    <script src="home.js"></script>
 </body>
 </html>
