--- a/z-portfolio/project10.html
+++ b/z-portfolio/project10.html
@@ -11,7 +11,7 @@
     <header class="nav">
     <nav>
         <div class="logo">
-            <a href="index.html"><img src="z-images/logo.png" alt=""></a>
+            <a href="index.html"><img src="/z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
@@ -31,19 +31,22 @@
     <section class="project">
         <div class="project-details">
             <h2>project</h2>
-            <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
+            <p>This goes back to one of the very firsts project we did in school.</p>
         </div>
 
         <div class="photo-gallery">
             <div class="gallery-item">
-                <img src="images/portfolio" alt="Graphic Design Project 1">
-        </div>
+                <img src="images/portfolio10-1.png" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio10-2.png" alt="Graphic Design Project 1"> 
+            </div>
         </div>
     </section>
 
         <footer class="footer">
             <div class="footer-left">
-                <img src="z-images/logo.png" alt="Logo">
+                <img src="/z-images/logo.png" alt="Logo">
                 <div class="copyright">&copy; 2023 Graci Edinger</div>
             </div>
             <div class="footer-right">
