--- a/z-portfolio/project12.html
+++ b/z-portfolio/project12.html
@@ -11,7 +11,7 @@
     <header class="nav">
     <nav>
         <div class="logo">
-            <a href="index.html"><img src="z-images/logo.png" alt=""></a>
+            <a href="index.html"><img src="/z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
@@ -43,7 +43,7 @@
 
     <footer class="footer">
         <div class="footer-left">
-            <img src="z-images/logo.png" alt="Logo">
+            <img src="/z-images/logo.png" alt="Logo">
             <div class="copyright">&copy; 2023 Graci Edinger</div>
         </div>
         <div class="footer-right">
