--- a/z-portfolio/project6.html
+++ b/z-portfolio/project6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
+    <link href="portfolio1img.css" rel="stylesheet">
     <link rel="stylesheet" href="/z-css/nav-footer.css">
     <title>Project</title>
 </head>
@@ -11,7 +12,7 @@
     <header class="nav">
     <nav>
         <div class="logo">
-            <a href="index.html"><img src="z-images/logo.png" alt=""></a>
+            <a href="index.html"><img src="/z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
@@ -36,14 +37,14 @@
 
         <div class="photo-gallery">
             <div class="gallery-item">
-                <img src="images/portfolio" alt="Graphic Design Project 1">
+                <img src="images/portfolio6-1.jpg" alt="Graphic Design Project 1">
             </div>
         </div>
     </section>
 
     <footer class="footer">
         <div class="footer-left">
-            <img src="z-images/logo.png" alt="Logo">
+            <img src="/z-images/logo.png" alt="Logo">
             <div class="copyright">&copy; 2023 Graci Edinger</div>
         </div>
         <div class="footer-right">
