--- a/z-portfolio/project7.html
+++ b/z-portfolio/project7.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
-    <link href="portfolio1img.css" rel="stylesheet">
     <link rel="stylesheet" href="/z-css/nav-footer.css">
     <title>Project</title>
 </head>
@@ -12,7 +11,7 @@
     <header class="nav">
     <nav>
         <div class="logo">
-            <a href="index.html"><img src="z-images/logo.png" alt=""></a>
+            <a href="index.html"><img src="/z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
@@ -37,17 +36,23 @@
 
         <div class="photo-gallery">
             <div class="gallery-item">
-                <img src="images/portfolio7-1.png" alt="Graphic Design Project 1">
+                <img src="images/portfolio7-1.jpg" alt="Graphic Design Project 1">
             </div>
             <div class="gallery-item">
-                <img src="images/portfolio7-2.png" alt="Graphic Design Project 1">
+                <img src="images/portfolio7-2.jpg" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio7-3.png" alt="Graphic Design Project 1">
+            </div>
+            <div class="gallery-item">
+                <img src="images/portfolio7-4.png" alt="Graphic Design Project 1">
             </div>
         </div>
     </section>
 
     <footer class="footer">
         <div class="footer-left">
-            <img src="z-images/logo.png" alt="Logo">
+            <img src="/z-images/logo.png" alt="Logo">
             <div class="copyright">&copy; 2023 Graci Edinger</div>
         </div>
         <div class="footer-right">
