--- a/z-portfolio/project8.html
+++ b/z-portfolio/project8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="portfolio.css" rel="stylesheet">
+    <link href="portfolio8.css" rel="stylesheet">
     <link rel="stylesheet" href="/z-css/nav-footer.css">
     <title>Project</title>
 </head>
@@ -11,7 +11,7 @@
     <header class="nav">
     <nav>
         <div class="logo">
-            <a href="index.html"><img src="z-images/logo.png" alt=""></a>
+            <a href="index.html"><img src="/z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
@@ -25,25 +25,43 @@
   </header>
 
   <header class="title">
-    <h1>Project</h1>
+    <h1>Logo Design</h1>
   </header>
 
     <section class="project">
         <div class="project-details">
-            <h2>project</h2>
-            <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
+            <h2>Al Patro Logo</h2>
+            <p>
+                This project marked one of my initial forays into Adobe Illustrator. My aim was to create a minimalist design imbued with distinctive character. The meticulously handcrafted olive branch, a central element, was seamlessly integrated into both the logo and the comprehensive style guide developed for this restaurant branding project.
+            </p>
         </div>
 
         <div class="photo-gallery">
-            <div class="gallery-item">
-                <img src="images/portfolio" alt="Graphic Design Project 1">
+            <div class="top-row">
+                <div class="gallery-item">
+                    <img src="images/portfolio8-1.jpg" alt="Graphic Design Project 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/portfolio8-2.jpg" alt="Graphic Design Project 2">
+                </div>
+            </div>
+            <div class="bottom-row">
+                <div class="gallery-item">
+                    <img src="images/portfolio8-3.jpg" alt="Graphic Design Project 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/portfolio8-4.jpg" alt="Graphic Design Project 4">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/portfolio8-5.jpg" alt="Graphic Design Project 5">
+                </div>
             </div>
         </div>
     </section>
 
     <footer class="footer">
         <div class="footer-left">
-            <img src="z-images/logo.png" alt="Logo">
+            <img src="/z-images/logo.png" alt="Logo">
             <div class="copyright">&copy; 2023 Graci Edinger</div>
         </div>
         <div class="footer-right">
