--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="portfolio.html" class="btn">View Portfolio</a>
         </div>
         <div class="card">
-            <h2>Photography Galler</h2>
+            <h2>Photography Gallery</h2>
             <p>Explore my photo gallery.</p>
             <a href="photo.html" class="btn">View Gallery</a>
         </div>
