--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Graci Portfolio | About Me</title>
     <link href="z-css/about.css" rel="stylesheet">
     <link rel="stylesheet" href="z-css/nav-footer.css">
 </head>
