--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="z-css/contact.css" rel="stylesheet">
     <link rel="stylesheet" href="z-css/nav-footer.css">
-    <title>Contact</title>
+    <title>Graci Portfolio | Contact</title>
 </head>
 <body>   
   <header class="nav">
