--- a/photo.html
+++ b/photo.html
@@ -34,7 +34,7 @@
         <p>
             Immerse yourself in the tranquil beauty of the sea with my beach photography portfolio. Capturing the timeless allure of the ocean's vast expanse, our collection transports you to the serene shores where the waves meet the horizon. From the graceful dance of sea birds against the endless blue canvas to the soothing rhythm of the tides, each photograph invites you to savor the essence of coastal serenity.
         </p>
-        <a href="portfolio.html" class="button">View Photo's</a>    
+        <a href="z-imagesgallery/beach.html" class="button">View Photo's</a>    
         </div>   
     </section>
 
