--- a/z-portfolio/project5.html
+++ b/z-portfolio/project5.html
@@ -6,7 +6,7 @@
     <link href="portfolio.css" rel="stylesheet">
     <link href="portfolio1img.css" rel="stylesheet">
     <link rel="stylesheet" href="/z-css/nav-footer.css">
-    <title>National Park Poster Project</title>
+    <title>Graci Portfolio | National Park Poster Project</title>
 </head>
 <body>   
     <header class="nav">
