--- a/z-portfolio/project6.html
+++ b/z-portfolio/project6.html
@@ -6,7 +6,7 @@
     <link href="portfolio.css" rel="stylesheet">
     <link href="portfolio1img.css" rel="stylesheet">
     <link rel="stylesheet" href="/z-css/nav-footer.css">
-    <title>Project</title>
+    <title>Graci Portfolio | Killua Zoldyck</title>
 </head>
 <body>   
     <header class="nav">
@@ -26,12 +26,12 @@
   </header>
 
   <header class="title">
-    <h1>Project</h1>
+    <h1>Personal Project</h1>
   </header>
 
     <section class="project">
         <div class="project-details">
-            <h2>project</h2>
+            <h2>Killua Zoldyck Design</h2>
             <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
         </div>
 
