--- a/z-portfolio/project7.html
+++ b/z-portfolio/project7.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
     <link rel="stylesheet" href="/z-css/nav-footer.css">
-    <title>Project</title>
+    <title>Graci Portfolio | Product Photography</title>
 </head>
 <body>   
     <header class="nav">
@@ -25,12 +25,12 @@
   </header>
 
   <header class="title">
-    <h1>Project</h1>
+    <h1>Product Photography Project</h1>
   </header>
 
     <section class="project">
         <div class="project-details">
-            <h2>project</h2>
+            <h2>Mountain Dew Code Red Product Photography</h2>
             <p>Description of the graphic design project goes here. You can provide details about the project, including the objectives, design process, and any challenges you faced.</p>
         </div>
 
