--- a/z-portfolio/project8.html
+++ b/z-portfolio/project8.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio8.css" rel="stylesheet">
     <link rel="stylesheet" href="/z-css/nav-footer.css">
-    <title>Project</title>
+    <title>Graci Portfolio | Logo Design</title>
 </head>
 <body>   
     <header class="nav">
