--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="z-css/portfolio.css" rel="stylesheet">
     <link rel="stylesheet" href="z-css/nav-footer.css">
-    <title>Portfolio</title>
+    <title>Graci Portfolio | Portfolio</title>
 </head>
 <body>
     <header class="nav">
