--- a/z-portfolio/project1.html
+++ b/z-portfolio/project1.html
@@ -6,7 +6,7 @@
     <link href="portfolio.css" rel="stylesheet">
     <link href="portfolio1img.css" rel="stylesheet">
     <link rel="stylesheet" href="/z-css/nav-footer.css">
-    <title>Website GUI Design</title>
+    <title>Graci Portfolio | Website GUI Design</title>
 </head>
 <body>   
     <header class="nav">
