--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="z-css/photo.css" rel="stylesheet">
     <link rel="stylesheet" href="z-css/nav-footer.css">
-    <title>Contact</title>
+    <title>Graci Portfolio | Photography Gallery</title>
 </head>
 <body>   
   <header class="nav">
@@ -32,7 +32,7 @@
         <div class="hero-content-beach">
         <h2>Beach Photo's</h2>
         <p>
-            Immerse yourself in the tranquil beauty of the sea with my beach photography portfolio. Capturing the timeless allure of the ocean's vast expanse, our collection transports you to the serene shores where the waves meet the horizon. From the graceful dance of sea birds against the endless blue canvas to the soothing rhythm of the tides, each photograph invites you to savor the essence of coastal serenity.
+            Immerse yourself in the tranquil beauty of the sea with my beach photography portfolio. Capturing the timeless allure of the ocean's vast expanse, my collection transports you to the serene shores where the waves meet the horizon. From the graceful dance of sea birds against the endless blue canvas to the soothing rhythm of the tides, each photograph invites you to savor the essence of coastal serenity.
         </p>
         <a href="z-imagesgallery/beach.html" class="button">View Photo's</a>    
         </div>   
@@ -40,11 +40,11 @@
 
     <section class="hero-animals">
         <div class="hero-content-animals">
-        <h2>Beach Photo's</h2>
+        <h2>Doggo Photo's</h2>
         <p>
-            Explore the heartwarming world of canine companions through my dog photography portfolio. From the exuberant playfulness of puppies to the dignified wisdom of senior dogs, my collection celebrates the diverse personalities and emotions of our four-legged friends. With each click of the shutter, we capture the loyalty, joy, and boundless love that dogs bring to our lives, inviting you to connect with the warmth and charm of these furry family members.
+            Explore the heartwarming world of canine companions through my dog photography portfolio. From the exuberant playfulness of puppies to the dignified wisdom of senior dogs, my collection celebrates the diverse personalities and emotions of our four-legged friends. With each click of the shutter, I try to capture the loyalty, joy, and boundless love that dogs bring to our lives, inviting you to connect with the warmth and charm of these furry family members.
         </p>
-        <a href="portfolio.html" class="button">View Photo's</a>    
+        <a href="#" class="button">View Photo's</a>    
         </div>   
     </section>
 
