--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
             <a href="z-portfolio/project6.html">
                 <img src="z-images/project6.png" alt="">
                 <h2>Personal Project</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>A fun little design I made based on an Anime.</p>
             </a>
         </div>
 
@@ -97,7 +97,7 @@
             <a href="z-portfolio/project9.html">
                 <img src="z-images/project9.jpg" alt="">
                 <h2>Portrait Photo Editing</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Project where we had to take portrait photos and edit them into some type of creative style.</p>
             </a>
         </div>
 
