--- a/z-portfolio/project1.html
+++ b/z-portfolio/project1.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
     <link href="portfolio1img.css" rel="stylesheet">
-    <link rel="stylesheet" href="/z-css/nav-footer.css">
+    <link rel="stylesheet" href="../z-css/nav-footer.css">
     <title>Graci Portfolio | Website GUI Design</title>
 </head>
 <body>   
     <header class="nav">
     <nav>
         <div class="logo">
-            <a href="index.html"><img src="/z-images/logo.png" alt=""></a>
+            <a href="index.html"><img src="../z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
             <li><a href="/index.html">Home</a></li>
