--- a/z-imagesgallery/beach.html
+++ b/z-imagesgallery/beach.html
@@ -14,12 +14,12 @@
           <a href="index.html"><img src="../z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
-          <li><a href="/index.html">Home</a></li>
-            <li><a href="/portfolio.html">Portfolio</a></li>
-            <li><a href="/photo.html">Photo's</a></li>
-            <li><a href="/about.html">About</a></li>
+          <li><a href="../index.html">Home</a></li>
+            <li><a href="../portfolio.html">Portfolio</a></li>
+            <li><a href="../photo.html">Photo's</a></li>
+            <li><a href="../about.html">About</a></li>
             <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
     </nav>
   </header>
