--- a/z-portfolio/project7.html
+++ b/z-portfolio/project7.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="portfolio.css" rel="stylesheet">
-    <link rel="stylesheet" href="/z-css/nav-footer.css">
+    <link rel="stylesheet" href="../z-css/nav-footer.css">
     <title>Graci Portfolio | Product Photography</title>
 </head>
 <body>   
     <header class="nav">
     <nav>
         <div class="logo">
-            <a href="index.html"><img src="/z-images/logo.png" alt=""></a>
+            <a href="index.html"><img src="../z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/portfolio.html">Portfolio</a></li>
-            <li><a href="/photo.html">Photo's</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../portfolio.html">Portfolio</a></li>
+            <li><a href="../photo.html">Photo's</a></li>
+            <li><a href="../about.html">About</a></li>
             <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
     </nav>
   </header>
