--- a/z-imagesgallery/beach.html
+++ b/z-imagesgallery/beach.html
@@ -11,7 +11,7 @@
   <header class="nav">
     <nav>
         <div class="logo">
-          <a href="index.html"><img src="../z-images/logo.png" alt=""></a>
+          <a href="../index.html"><img src="../z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
           <li><a href="../index.html">Home</a></li>
