--- a/z-portfolio/project12.html
+++ b/z-portfolio/project12.html
@@ -16,7 +16,7 @@
         <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
             <li><a href="../portfolio.html">Portfolio</a></li>
-            <li><a href="../photo.html">Photo's</a></li>
+            <li><a href="../photo.html">Photos</a></li>
             <li><a href="../about.html">About</a></li>
             <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
             <li><a href="../contact.html">Contact</a></li>
@@ -49,11 +49,11 @@
         <div class="footer-right">
             <nav class="footer-links">
                 <ul>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="photo.html">Photo's</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="../portfolio.html">Portfolio</a></li>
+                    <li><a href="../photo.html">Photos</a></li>
+                    <li><a href="../about.html">About</a></li>
                     <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
