--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
           <a href="index.html"><img src="z-images/logo.png" alt=""></a>
         </div>
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="photo.html">Photo's</a></li>
+            <li><a href="photo.html">Photos</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -42,6 +42,19 @@
     </section>
   </main>
 
+  <section class="content">
+    <div class="card">
+        <h2>Email Me</h2>
+        <p>instert email adress here</p>
+        <a href="mailto:recipient@example.com" class="btn">Send Email</a>
+    </div>
+    <div class="card">
+        <h2>Social Media</h2>
+        <p>Explore more of my work.</p>
+        <a href="#" class="btn">Socail Media</a>
+    </div>
+</section>
+
   <footer class="footer">
     <div class="footer-left">
         <img src="z-images/logo.png" alt="Logo">
@@ -50,11 +63,12 @@
     <div class="footer-right">
         <nav class="footer-links">
             <ul>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="photo.html">Photo's</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="photo.html">Photos</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="https://dev-graci-edinger-blog.pantheonsite.io/">Blog</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
