--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,13 @@
   <section class="content">
     <div class="card">
         <h2>Email Me</h2>
-        <p>instert email adress here</p>
-        <a href="mailto:recipient@example.com" class="btn">Send Email</a>
+        <p>graciedinger.design@gmail.com</p>
+        <a href="mailto:graciedinger.design@gmail.com" class="btn">Send Email</a>
     </div>
     <div class="card">
         <h2>Social Media</h2>
         <p>Explore more of my work.</p>
-        <a href="#" class="btn">Socail Media</a>
+        <a href="https://graciedingerdesign.myportfolio.com/home" class="btn">Socail Media</a>
     </div>
 </section>
 
